# aisem

./: .gitignore  explore.ipynb  nicky.ipynb  pyproject.toml  results.csv
group_project/: README.md  combined.ipynb  explore.ipynb  helena.ipynb  pyproject.toml  to_try.md
group_project/models/oversampling_with_random_transform/: what.md
group_project/models/oversampling_with_random_transform/Jan09_15-21-58_Erika-Albin/: events.out.tfevents.1736432518.Erika-Albin.106275.26
group_project/models/replace_last_layer_resnet/: what.md
group_project/models/replace_last_layer_resnet/Jan09_17-13-32_Erika-Albin/: events.out.tfevents.1736439212.Erika-Albin.106275.50
group_project/models/replace_last_layer_resnet_big_encoding/: what.md
group_project/models/replace_last_layer_resnet_big_encoding/Jan09_18-30-06_Erika-Albin/: events.out.tfevents.1736443806.Erika-Albin.106275.55
group_project/models/replace_last_layer_resnet_remove/: what.md
group_project/models/trained_model_no_random/: what.md
group_project/models/trained_model_no_random/Jan09_14-38-56_Erika-Albin/: events.out.tfevents.1736429936.Erika-Albin.106275.13
group_project/models/type_good_model/Jan10_10-27-59_Erika-Albin/: events.out.tfevents.1736501279.Erika-Albin.13490.11
individual_project/: explore.ipynb  importdata.sh  machine_learning_multi.ipynb  machine_learning_single.ipynb  model.ipynb  model_500k_multi.ipynb  model_500k_single.ipynb  pyproject.toml
models/different_timeframe_encoding/: what.md
models/different_timeframe_encoding/Jan09_16-10-15_Erika-Albin/: events.out.tfevents.1736435415.Erika-Albin.106275.34
models/different_timeframe_encoding/Jan09_16-10-15_Erika-Albin/Test_Accuracy_test/: events.out.tfevents.1736435672.Erika-Albin.106275.38
models/different_timeframe_encoding/Jan09_16-10-15_Erika-Albin/Test_Loss_test/: events.out.tfevents.1736435672.Erika-Albin.106275.37
models/different_timeframe_encoding/Jan09_16-10-15_Erika-Albin/Train_Accuracy_train/: events.out.tfevents.1736435416.Erika-Albin.106275.36
models/oversampling_with_random_transform/Jan09_15-21-58_Erika-Albin/Test_Accuracy_test/: events.out.tfevents.1736432771.Erika-Albin.106275.30
models/oversampling_with_random_transform/Jan09_15-21-58_Erika-Albin/Train_Accuracy_train/: events.out.tfevents.1736432519.Erika-Albin.106275.28
models/oversampling_with_random_transform/Jan09_15-21-58_Erika-Albin/Train_Loss_train/: events.out.tfevents.1736432519.Erika-Albin.106275.27
models/replace_last_layer_resnet_remove/Jan09_19-23-14_Erika-Albin/: events.out.tfevents.1736446994.Erika-Albin.106275.61
models/trained_model_no_random/: what.md
models/type_good_model/: what.md
(+22 files in other folders)
