[tool.poetry]
name = "aisem"
version = "0.1.0"
description = ""
authors = ["Albin Lindqvist <albin.lindqvist@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.12.*"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.1"
torch = {version = "^2.5.1+cpu", source = "pytorch"}
torchvision = {version = "^0.20.1+cpu", source = "pytorch"}
torchaudio = {version = "^2.5.1+cpu", source = "pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
