[tool.poetry]
name = "aisem"
version = "0.1.0"
description = ""
authors = ["Albin Lindqvist <albin.lindqvist@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.12.*"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
numpy = "^2.2.1"
# torch = {version = "^2.5.1+cpu", source = "pytorch"}
# torchvision = {version = "^0.20.1+cpu", source = "pytorch"}
# torchaudio = {version = "^2.5.1+cpu", source = "pytorch"}
torch = {version = "^2.5.1", source = "pytorch_cuda"}
torchvision = {version = "^0.20.1", source = "pytorch_cuda"}
torchaudio = {version = "^2.5.1", source = "pytorch_cuda"}
matplotlib = "^3.10.0"
tensorboard = "^2.18.0"
torch-tb-profiler = "^0.4.3"
tqdm = "^4.67.1"
ipywidgets = "^8.1.5"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority="explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
