[project]
name = "individual-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.27.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "kaggle>=1.6.17",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.48.1",
]
